--- a/pfdb_flask_app/templates/team.html
+++ b/pfdb_flask_app/templates/team.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Teams</title>
-<link href="style.css" rel="stylesheet" type="text/css" />
+<link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" type="text/css" />
 <script language="JavaScript">
 </script>
 </head>
